/*
 * Filename: Library.java
 * Author: David
 * Date Created: 11/17/2020
 */

package edu.umgc.librarymanager.data.model;

/**
 * A class that models some basic information for the Library.
 * @author David
 */
public class Library {

    public String getAddress() {
        return null;
    }

    public String getName() {
        return null;
    }

    public String getPhoneNumber() {
        return null;
    }

}
