/*
 * Filename: PublishData.java
 * Author: David
 * Date Created: 11/17/2020
 */

package edu.umgc.librarymanager.data.model;

import java.time.ZonedDateTime;

/**
 * A class that is used to model some information about the publishing of an item.
 * @author David
 */
public class PublishData {

    public String getPublisher() {
        return null;
    }

    public ZonedDateTime getPublishDate() {
        return null;
    }

    public String getPublishLocation() {
        return null;
    }

}
