/*
 * Filename: SearchCriteria.java
 * Author: David
 * Date Created: 11/17/2020
 */

package edu.umgc.librarymanager.service;

/**
 * A class that is used to model information for the search criteria.
 * @author David
 */
public class SearchCriteria {

    public String getTitle() {
        return null;
    }

    public String getKeyword() {
        return null;
    }

}
